@@ -1,4 +1,11 @@
 2006-07-24  Florian Boor <florian.boor@kernelconcepts.de>
+    *evend_db.c: (event_load_deleted_callback): Removed.
+    (event_load_deleted): Removed.
+    (event_calendar_list_deleted): Make more efficient.
+    * event-db.c, event-db.h (event_db_find_calendar_by_name): New function.
+    (event_db_find_calendar_by_name): New function.
+
+2006-07-24  Florian Boor <florian.boor@kernelconcepts.de>
 
     * event-db.c (event_db_new): Introduce version 4 database, create
     table for deleted events.
